# sdkpt-ml

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  dev.dockerfile  docker-compose.yml  dockerfile  kmeans_model.pkl  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 05e3ad600f28_added_kerentanan.py  08d11e076d57_.py  28a58f7e8d5d_added_upload_survey.py  81e91c9ca30b_initial.py  976ef1bba806_initial.py  987d9f8343d6_added_upload_survey.py  c5f87cd9a547_initial_migration.py  ea898f5731a0_added_new_models.py  f1c57becd205_initial_migration.py
app/: main.py
app/api/: deps.py  routers.py
app/core/: config.py
app/crud/: __init__.py  base.py  intervention.py  kelurahan.py  kerentanan.py  patient.py  survey.py  upload_survey.py
app/data/: cases_month.csv  intervensi.csv  intervensi_static.csv  intervensis.csv  kelurahan_latest.csv  kelurahan_monthly.csv  kerentanan.csv  monthly_cases.csv  survei.csv
app/db/: base.py  base_class.py
app/models/: __init__.py  fasyankes.py  intervention.py  kecamatan.py  kelurahan.py  kerentanan.py  patient.py  puskesmas.py  semar_betul_auth.py  survey.py  upload_survey.py
app/schemas/: __init__.py  cases.py  intervention.py  kelurahan.py  kerentanan.py  patient.py  prediction.py  semar_betul_auth.py  survey.json  survey.py  survey_test.json  upload_survey.py
app/service/: intervention_service.py  prediction_service.py  (+1 more)
dev_data/: Data TB - kedaireka bu tari.xlsx  interventions.csv  kelurahan.csv  patient.csv
vulnerability_models/: kmeans_model.pkl  logistic_regression_model.pkl
(+21 files in other folders)
