[tool.poetry]
name = "sdkpt-ml"
version = "0.1.0"
description = "sdkpt ml api"
authors = ["Ahmad Fajar Kusumajati <111202012995@mhs.dinus.ac.id>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
