[tool.poetry]
name = "sdkpt-ml"
version = "0.1.0"
description = ""
authors = ["Ahmad Fajar Kusumajati <111202012995@mhs.dinus.ac.id>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11 <3.13"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pandas = "^2.1.1"
scikit-learn = "^1.3.2"
statsmodels = "^0.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
